force-app/main/default/objects/FNS_ProcessGroup__c/FNS_ProcessGroup__c.object-meta.xml
<CustomObject>
    <label>Process Group</label>
    <nameField>
        <label>Process Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Group</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>