force-app/main/default/objects/FNS_ProcessGroup__c/fields/FNS_Description__c.field-meta.xml
<CustomField>
    <fullName>FNS_Description__c</fullName>
    <label>Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>