force-app/main/default/objects/FNS_ProcessGroup__c/fields/FNS_InactiveIndicator__c.field-meta.xml
<CustomField>
    <fullName>FNS_InactiveIndicator__c</fullName>
    <label>Inactive Indicator</label>
    <length>20</length>
    <type>Text</type>
</CustomField>