force-app/main/default/objects/FNS_ProcessGroup__c/fields/FNS_NextDefaultProcessGroupId__c.field-meta.xml
<CustomField>
    <fullName>FNS_NextDefaultProcessGroupId__c</fullName>
    <label>Next Default Process Group Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>