force-app/main/default/objects/FNS_ProcessGroup__c/fields/FNS_ProcessGroupExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProcessGroupExtId__c</fullName>
    <externalId>true</externalId>
    <label>Process Group Ext Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>