force-app/main/default/objects/FNS_ProcessGroup__c/recordTypes/FNS_ProcessGroup.recordType-meta.xml
<RecordType>
    <fullName>FNS_ProcessGroup</fullName>
    <active>true</active>
    <label>Process Group</label>
</RecordType>