force-app/main/default/objects/FNS_ProcessGroup__c/listViews/FNS_Process_Group.listView-meta.xml
<ListView>
    <fullName>FNS_Process_Group</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Process Groups</label>
</ListView>